# coffee-data-science-pipeline

./: README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb
