[tool.poetry]
name = "coffee-data-science-pipeline-1"
version = "0.1.0"
description = ""
authors = ["RToyoyama <renantoyoyama@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.4.7"
pandas = "^2.3.3"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
scikit-learn = "^1.7.2"
kagglehub = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
